gateway/1.5/modules/ROOT/pages/_partials/task-reg-run-flex-gateway.adoc
// partial for registering in connected/local modes with a username and password, connected app, or a token, in a Docker container or as a Linux service

// tag::prerequisites-heading[]

== Before You Begin

Before registering Flex Gateway, you must complete the following tasks:
// end::prerequisites-heading[]
// tag::app-prerequisites[] 

* xref:access-management::connected-apps-developers.adoc#create-a-connected-app[Configure a Connected App]
** Include the following scopes:
*** Read Servers
*** Manage Servers
*** View Organization
** Save the *Id* and *Secret* of the Connected app you configure.

// end::app-prerequisites[]
// tag::prerequisites[]

* xref:flex-install.adoc[Install a Flex Gateway]
* Request _Manage Servers_ and _Read Servers_ permissions in Runtime Manager from your Anypoint Platform admin
* Collect the following information from your Anypoint Platform instance: 
** The *Organization ID* for the organization where you want to run Flex Gateway
+
See xref:access-management::organization.adoc#find-your-organization-id[Find your Organization ID] for more information on how to find your Organization ID.

// end::prerequisites[]
// tag::environment-prerequisites[]

** The *Environment ID* for the environment where you want to run Flex Gateway
+
See xref:api-manager::latest-overview-concept.adoc#what-api-manager-looks-like[What API Manager Looks Like]
for more information on how to find your Environment ID.

// end::environment-prerequisites[]
// tag::token-prerequisites[]

** The registration *token* for the environment in Anypoint Platform where you want to run Flex Gateway
+
Navigate to Runtime Manager, select *Flex Gateway* in the left navigation, and click *Add Gateway*
to generate set of instructions that includes a command block with the registration token.

// end::token-prerequisites[]
// tag::user-prerequisites[]

** The *Username* and *Password* of a user with _Read Servers_ and _Manage Servers_ permissions for Runtime Manager

// end::user-prerequisites[]
// tag::app-container-heading[]
== Register and Run with a Connected App in a Container
// end::app-container-heading[]
// tag::user-container-heading[]
== Register and Run with a Username and Password in a Container
// end::user-container-heading[]
// tag::token-container-heading[]
== Register and Run with a Token in a Container
// end::token-container-heading[]
// tag::app-docker-heading[]
=== Register and Run with a Connected App in a Docker Container
// end::app-docker-heading[]
// tag::user-docker-heading[]
=== Register and Run with a Username and Password in a Docker Container
// end::user-docker-heading[]
// tag::token-docker-heading[]
=== Register and Run with a Token in a Docker Container
// end::token-docker-heading[]
// tag::app-podman-heading[]
=== Register and Run with a Connected App in a Podman Container
// end::app-podman-heading[]
// tag::user-podman-heading[]
=== Register and Run with a Username and Password in a Podman Container
// end::user-podman-heading[]
// tag::token-podman-heading[]
=== Register and Run with a Token in a Podman Container
// end::token-podman-heading[]
// tag::app-linux-heading[]
== Register and Run with a Connected App as a Linux Service
// end::app-linux-heading[]
// tag::user-linux-heading[]
== Register and Run with a Username and Password as a Linux Service
// end::user-linux-heading[]
// tag::token-linux-heading[]
== Register and Run with a Token as a Linux Service
// end::token-linux-heading[]
// tag::app-k8s-heading[]
== Register and Run with a Connected App in a Kubernetes Cluster
// end::app-k8s-heading[]
// tag::user-k8s-heading[]
== Register and Run with a Username and Password in a Kubernetes Cluster
// end::user-k8s-heading[]
// tag::token-k8s-heading[]
== Register and Run with a Token in a Kubernetes Cluster
// end::token-k8s-heading[]
// tag::app-openshift-heading[]
== Register and Run with a Connected App in an OpenShift Cluster
// end::app-openshift-heading[]
// tag::user-openshift-heading[]
== Register and Run with a Username and Password in an OpenShift Cluster
// end::user-openshift-heading[]
// tag::token-openshift-heading[]
== Register and Run with a Token in an OpenShift Cluster
// end::token-openshift-heading[]

// tag::note-openshift-k8[]

From the command line, OpenShift procedures match Kubernetes procedures. 
// end::note-openshift-k8[]

// logos and links to sections that _use anchors_ in install and reg/run pages
// tag::table-logos-links[]
[cols="1a,1a,1a,1a"]
|===
|image:install-linux-logo.png[20%,20%,xref="#linux"]
|image:install-container-logo.png[25%,25%,xref="#container"]
|image:install-kubernetes-logo.png[20%,20%,xref="#kubernetes"]
|image:install-openshift-logo.png[20%,20%,xref="#openshift"]

|<<linux,Linux>>
|<<container,Container>>
|<<kubernetes,Kubernetes>>
|<<openshift,OpenShift>>
|===
// end::table-logos-links[]

// tag::table-containers-logos-heading[]
You can register and run Flex Gateway for use in one of the following containers:
// end::table-containers-logos-heading[]

// tag::table-containers-logos-links[]
[cols="1a,1a"]
|===
|image:install-docker-logo.png[15%,15%,xref="#docker"]
|image:install-podman-logo.png[12%,12%,xref="#podman"]

|<<docker,Docker>>
|<<podman,Podman>>
|===
// end::table-containers-logos-links[]

// tag::reg-command-intro[]
To register a Flex Gateway with Anypoint Platform, you must enter the registration command and then the start command. Each command includes information specific to your Anypoint Platform instance and *must be updated before* executing. See <<Before You Begin>> for more information on how to find the information you will need.
// end::reg-command-intro[]
//
// tag::k8s-connected-intro[]

In Connected Mode, Flex Gateway typically serves as an ingress or Edge API gateway that receives traffic from outside of the cluster. Flex Gateway can also act as a standalone gateway for internal (east-west) services. 

Most management takes place within Anypoint Platform: 

* Deploy APIs to your cluster.
* Apply policies and other configurations.
* Create resources (_with the exception_ of Configuration and Service resources). 

In Connected Mode, resource creation through `kubectl apply` is possible but restricted to the following resource types:
Configuration, Service, Extension, and PolicyBinding of types `tls`, `tls-inbound`, and `tls-outbound`. For more info about resources, see xref:flex-local-configuration-reference-guide.adoc[].

// end::k8s-connected-intro[]
//
// tag::k8s-local-intro[]

In Local Mode, Flex Gateway typically acts as an ingress controller that manages external access to your cluster. Flex Gateway can also act as a standalone gateway for internal (east-west) traffic. 

When using this mode, you must know what resources to create and apply, and use `kubectl apply` to deploy Kubernetes targets and resources such as APIs, policies, or Flex Gateway-related resources to your gateway. 

Flex Gateway acts as an ingress controller when you apply an `Ingress` resource to configure gateway routing rules. You provide this configuration through a YAML file. The file supports other properties, such as `apiVersion`, `kind`, `metadata`, `spec` to configure a load balancer or proxy server, and `rules` for directing HTTP and HTTPS traffic. For more information about how Flex Gateway manages `Ingress` resources, see xref:flex-gateway-k8-ingress-class.adoc[].

// end::k8s-local-intro[]

// tag::k8s-reg-command-intro[]
To register Flex Gateway with Anypoint Platform, run the Docker registration command with required options. After registering, use a Helm command to install the Helm chart for the registered gateway, and deploy the gateway to a cluster. The deployment process requires an existing cluster. See <<Before You Begin>> for more prerequisites to these procedures.
// end::k8s-reg-command-intro[] 

// tag::sub-coll-info[]

=== Collect Your Registration Data
 
Before registering your Flex Gateway instance, collect information for the following registration command options: 

// end::sub-coll-info[]
// tag::sub-coll-info-container[]

==== Collect Your Registration Data

Before registering your Flex Gateway instance, collect information for the following registration command options:

// end::sub-coll-info-container[]
// tag::user-replace-content[]

* `--username` = the username for an Anypoint Platform user with _Read Servers_ and _Manage Servers_ permissions for Runtime Manager
* `--password` = the password for an Anypoint Platform user with _Read Servers_ and _Manage Servers_ permissions for Runtime Manager
// end::user-replace-content[]
// tag::token-replace-content[]
* `--token` = the registration token for your environment in Anypoint Platform
// end::token-replace-content[]
// tag::app-replace-content[]

* `--client-id` = the Id for the Connected App you configured in Access Management
* `--client-secret` = the Secret for the Connected App you configured in Access Management

// end::app-replace-content[]
// tag::environment-replace-content[]

* `--environment` = the Environment Id for the environment in Anypoint Platform where you want the Flex Gateway to run

// end::environment-replace-content[]
// tag::replace-content[]

* `--organization` = your Organization ID in Anypoint Platform

* `--split` (optional) = the flag that determines whether registration information should split into multiple files. The default value is `false`.
+
If `split` is set to `true`, registration information is split into two files: `registration.yaml` and `certificate.yaml`. If `false`, all registration information is contained in one file: `registration.yaml`.
* `--output-directory` (optional) = the directory in which registration information is output

* `my-gateway` = the name you want to assign the gateway cluster

// end::replace-content[]
// tag::reg-command-heading[]

=== Register Flex Gateway

Register your Flex Gateway instance using the data that you gathered for the command options.

// end::reg-command-heading[]
// tag::reg-command-heading-container[]

==== Register Flex Gateway

Register your Flex Gateway instance using the data that you gathered for the command options.

// end::reg-command-heading-container[]
// tag::reg-command-heading-intro[]

You can register using one of the following container runtimes:

// * <<docker-container-reg,Docker>>
// * <<podman-container-reg,Podman>>

// end::reg-command-heading-intro[]
// tag::reg-command-openshift-heading-intro[]

You can register using one of the following container runtimes:

// * <<docker-openshift-container-reg,Docker>>
// * <<podman-openshift-container-reg,Podman>>

// end::reg-command-openshift-heading-intro[]
// tag::docker-reg-command-heading-intro[]
// ==== Docker
Run the following command to register using Docker:

// end::docker-reg-command-heading-intro[]
// tag::podman-reg-command-heading-intro[]
// ==== Podman
Run the following command to register using Podman:

// end::podman-reg-command-heading-intro[]
// tag::docker-create-directory-note[]

IMPORTANT: Create a new directory called `flex-registration` (or similar) and then run the registration command in this new directory. The command creates registration files in this location.

// end::docker-create-directory-note[]
// tag::reg-command-1[]

[source,ssh,subs=attributes+]
----
# end::reg-command-1[]
# tag::docker-reg-command[]
docker run --entrypoint flexctl \
-v "$(pwd)":/registration -u $UID mulesoft/flex-gateway \
register \
# end::docker-reg-command[]
# tag::podman-reg-command[]
podman run --entrypoint flexctl --userns=keep-id \
-v "$(pwd)":/registration:Z -u $UID docker.io/mulesoft/flex-gateway \
register \
# end::podman-reg-command[]
# tag::linux-reg-command[]
flexctl register \
# end::linux-reg-command[]
# tag::user-reg-command[]
--username=<your-username> \
--password=<your-password> \
# end::user-reg-command[]
# tag::app-reg-command[]
--client-id=<your-connected-app-client-id> \
--client-secret=<your-connected-app-client-secret> \
# end::app-reg-command[]
# tag::environment-reg-command[]
--environment=<your-environment-id> \
# end::environment-reg-command[]
# tag::token-reg-command[]
--token=<your-registration-token> \
# end::token-reg-command[]
# tag::connected-reg-command[]
--connected=true \
# end::connected-reg-command[]
# tag::organization-reg-command[]
--organization=<your-org-id> \
# end::organization-reg-command[]
# tag::output-reg-command-linux[]
--output-directory=/usr/local/share/mulesoft/flex-gateway/conf.d \
# end::output-reg-command-linux[]
# tag::output-reg-command-docker[]
--output-directory=/registration \
# end::output-reg-command-docker[]
# tag::reg-command-2[]
my-gateway
----

Use `sudo` if you encounter file permission issues when running this command.

NOTE: If you are in Europe you will need to add the `--anypoint-url=https://eu1.anypoint.mulesoft.com` flag
to your command.

// end::reg-command-2[]
// tag::after-reg[]
In the output directory, you should see the following new registration file(s):

* `registration.yaml`
* `certificate.yaml` (generated only if the `split` registration parameter is set to `true`, otherwise certificate information will be contained in `registration.yaml`)

IMPORTANT: These generated files are credentials for you to connect your Flex Gateway. If you lose them you
can no longer connect your Flex Gateway.
// end::after-reg[]
// tag::after-reg-2[]

// end::after-reg-2[]
// tag::linux-after-reg[]

// end::linux-after-reg[]
// tag::k8s-after-reg[]

// end::k8s-after-reg[]
// tag::disconnected-after-reg[]
In Runtime Manager, click *&#8592; Flex Gateway* in the left navigation to find your gateway in the UI. Notice that your gateway's status is *Disconnected*. Refresh the page, if necessary.
// end::disconnected-after-reg[]
// tag::start-command[]

=== Start Command

Run the following start command in the same directory where you ran the registration command:

[source,ssh,subs=attributes+]
----
docker run --rm \
-v "$(pwd)":/usr/local/share/mulesoft/flex-gateway/conf.d \
-p 8080:8080 \
mulesoft/flex-gateway
----
NOTE: Specify an optional name you want to assign to your Flex Replica by including the following: `-e FLEX_NAME=<name-for-flex-replica> \`.
// end::start-command[]
// tag::start-command-container[]

==== Start Command

Run the following start command in the same directory where you ran the registration command:

[source,ssh,subs=attributes+]
----
docker run --rm \
-v "$(pwd)":/usr/local/share/mulesoft/flex-gateway/conf.d \
-p 8080:8080 \
mulesoft/flex-gateway
----
NOTE: Specify an optional name you want to assign to your Flex Replica by including the following: `-e FLEX_NAME=<name-for-flex-replica> \`.
// end::start-command-container[]
// tag::podman-start-command[]

==== Start Command

Run the following start command in the same directory where you ran the registration command:

[source,ssh,subs=attributes+]
----
podman run --rm \
-v "$(pwd)":/usr/local/share/mulesoft/flex-gateway/conf.d \
-p 8080:8080 \
docker.io/mulesoft/flex-gateway
----
NOTE: Specify an optional name you want to assign to your Flex Replica by including the following: `-e FLEX_NAME=<name-for-flex-replica> \`.
// end::podman-start-command[]
// tag::start-command-local-intro[]

==== Start Command

Run the following start command in the same directory where you ran the registration command:

// end::start-command-local-intro[]
// tag::start-command-local[]

[source,ssh,subs=attributes+]
----
docker run --rm \
-v "$(pwd)":/usr/local/share/mulesoft/flex-gateway/conf.d \
-p 8080:8080 \
mulesoft/flex-gateway
----
NOTE: Specify an optional name you want to assign to your Flex Replica by including the following: `-e FLEX_NAME=<name-for-flex-replica> \`.

// end::start-command-local[]
// tag::podman-start-command-local[]

[source,ssh,subs=attributes+]
----
podman run --rm \
-v "$(pwd)":/usr/local/share/mulesoft/flex-gateway/conf.d \
-p 8080:8080 \
docker.io/mulesoft/flex-gateway
----
NOTE: Specify an optional name you want to assign to your Flex Replica by including the following: `-e FLEX_NAME=<name-for-flex-replica> \`.

// end::podman-start-command-local[]
// tag::start-command-local-valid[]
The output logs should include this line:

[source,ssh]
----
[flex-gateway-envoy][info] all dependencies initialized. starting workers
----
// end::start-command-local-valid[]
// tag::create-config-folder-file[]

// end::create-config-folder-file[]
// tag::config-content[]

// end::config-content[]
// tag::linux-start-commands[]

=== Start Commands

Start Flex Gateway with the following command: 

[source,ssh]
----
sudo systemctl start flex-gateway
----

Verify that the Flex Gateway service is running successfully:

[source,ssh]
----
systemctl list-units flex-gateway*
----

If `flex-gateway.service` has a status of `active`, Flex Gateway is successfully running.

[source,text]
----
  UNIT                              LOAD   ACTIVE SUB     DESCRIPTION
  flex-gateway.service              loaded active running Application
----

// end::linux-start-commands[]
// tag::k8s-install-flex-helm-chart-title[]

=== Install Helm Chart into the Namespace

// end::k8s-install-flex-helm-chart-title[]
// tag::k8s-install-flex-helm-chart-intro-connected[]

Register Flex Gateway, and then use Helm to deploy Flex Gateway to a node in your cluster and connect to Anypoint Platform. After deploying, use Runtime Manager to verify that the gateway is present and connected to Anypoint Platform.

// end::k8s-install-flex-helm-chart-intro-connected[]
// tag::k8s-install-flex-helm-chart-intro-local[]

Register Flex Gateway, and then use Helm to deploy Flex Gateway to a node in your cluster. 
// end::k8s-install-flex-helm-chart-intro-local[]
// 
// tag::k8s-flex-helm-chart[]
A Helm chart installs Flex Gateway, monitoring tools, and applications.
// end::k8s-flex-helm-chart[]
//
// tag::k8s-flex-helm-chart-add[]

. Add a Helm repository named `flex-gateway` for your chart: 
+
[source,helm]
----
helm repo add flex-gateway https://flex-packages.anypoint.mulesoft.com/helm
----
+
The command either adds the repository or skips this process if a Helm repository with that name already exists on your machine:
+
* If the repository is new, the command returns the following message:
+
----
"flex-gateway" has been added to your repositories
----
+
* If the repository already exists, the command returns the following message:
+
----
"flex-gateway" already exists with the same configuration, skipping
----

. Run `helm repo up`.
+
The command returns the following message:
+
----
Hang tight while we grab the latest from your chart repositories...
...Successfully got an update from the "flex-gateway" chart repository
Update Complete. ⎈Happy Helming!⎈
----
+
If you have more than one Helm repository on your machine, the message in your terminal window lists all of the repositories.
// end::k8s-flex-helm-chart-add[]
// tag::k8s-flex-helm-chart-deploy[]
//      PLEASE retain blank line before first step below

. Run the Helm command for deploying your gateway in {reg-mode} Mode:
+
[source,helm]
----
helm -n gateway upgrade -i --create-namespace \
--wait ingress flex-gateway/flex-gateway \ 
--set gateway.mode=connected \
--set-file registration.content=registration.yaml
----
+
This command creates the `gateway` namespace and a release named `ingress` if they do not exist. You can use names of your choice for your namespace and release. The command syntax for the Helm repository and chart names is `<helm-repo-name>/<helm-chart-name>`. 
+
The command uses `--set gateway.mode=connected` because the default for the Helm chart is Local Mode.
+
When you install Flex Gateway in Kubernetes, a Service type `LoadBalancer` is created by default. You must have the appropriate permissions to create a load balancer in your cloud. If the load balancer is not provisioned or has issues with the provisioning process, you must choose another type by changing the `service.type` property during the installation.
+
When successful, the command prints a message indicating an upgrade to your `ingress` release:
+
----
Release "ingress" does not exist. Installing it now.
NAME: ingress
LAST DEPLOYED: Mon Mar 20 21:36:19 2023
NAMESPACE: gateway
STATUS: deployed
REVISION: 1
TEST SUITE: None
----
+
The `REVISION` value increments the `ingress` release by `1` each time you run this command with the same namespace, repository, and chart names. For example, if you run the command a second time, you find a new revision number (`REVISION: 2`). The `LAST DEPLOYED` date reflects the date of that revision.
//    do not add an empty new line here at end, please
// end::k8s-flex-helm-chart-deploy[]
// tag::k8s-flex-helm-chart-deploy-local[]
//      PLEASE retain blank line before first step below

. Run the Helm command for deploying your gateway in {reg-mode} Mode:
+
[source,helm]
----
helm -n gateway upgrade -i --create-namespace \
--wait ingress flex-gateway/flex-gateway \ 
--set-file registration.content=registration.yaml
----
+
This command creates the `gateway` namespace and a release named `ingress` if they do not exist. You can use names of your choice for your namespace and release. The command syntax for the Helm repository and chart names is `<helm-repo-name>/<helm-chart-name>`. 
+
When you install Flex Gateway in Kubernetes, a Service type `LoadBalancer` is created by default. You must have the appropriate permissions to create a load balancer in your cloud. If the load balancer is not provisioned or has issues with the provisioning process, you must choose another type by changing the `service.type` property during the installation.
+
When successful, the command prints a message indicating an upgrade to your `ingress` release:
+
----
Release "ingress" does not exist. Installing it now.
NAME: ingress
LAST DEPLOYED: Mon Mar 20 21:36:19 2023
NAMESPACE: gateway
STATUS: deployed
REVISION: 1
TEST SUITE: None
----
+
The `REVISION` value increments the `ingress` release by `1` each time you run this command with the same namespace, repository, and chart names. For example, if you run the command a second time, you find a new revision number (`REVISION: 2`). The `LAST DEPLOYED` date reflects the date of that revision.
//    do not add an empty new line here at end, please
// end::k8s-flex-helm-chart-deploy-local[]
// tag::gateway-connected[]

In Runtime Manager, click *&#8592; Flex Gateway* in the left navigation to find your new gateway in the UI. Notice that your gateway's current status is *Connected*. Refresh the page, if necessary.

NOTE: After 30 days, a stopped or deleted gateway is removed from the Runtime Manager UI. Otherwise, the UI continues to list the gateway even if it is no longer running or connected.
// end::gateway-connected[]
// tag::helm-chart-options[]

=== Helm Chart Settings

To modify the default Helm settings with new values, such as `resource` values for CPU and memory settings, see xref:flex-gateway-k8-change-helm-settings.adoc[]. For additional Helm chart configurations, see xref:flex-gateway-k8-management.adoc[].

Before modifying a Helm chart for a Flex Gateway deployment, review the default Helm chart settings:

* Open the *flex-gateway* page in https://artifacthub.io/packages/helm/flex-gateway/flex-gateway[ArtifactHUB^]
* Run `helm show values <repository-name>/<chart-name>` from a terminal window.
+
.Example:
[source,kubernetes]
----
helm show values flex-gateway/flex-gateway
----
+
The example returns _default_ values of a repository and chart with the same name. 

To view the Helm chart `README`, run `helm show readme <repository-name>/<chart-name>` from a terminal window.

.Example:
[source,kubernetes]
----
helm show readme flex-gateway/flex-gateway
----

// end::helm-chart-options[]

// tag::links-to-openshift-reg-steps[]
Complete the following steps: 

. <<options-openshift>>
. <<reg-openshift>>
. <<deploy-openshift>>
// end::links-to-openshift-reg-steps[]
//
// tag::links-to-k8s-reg-steps[]

Complete the following steps: 

. <<options-k8s>>
. <<reg-k8s>>
. <<deploy-k8s>>
// end::links-to-k8s-reg-steps[]
